added client's job note in job_detail template

--- a/core/templates/core/job_detail.html
+++ b/core/templates/core/job_detail.html
@@ -45,6 +45,10 @@
               <span class="text-muted">€{{ job.price_rate_snapshot }}</span>
             </li>
             {% endif %}
+            <li class="mb-2">
+              <strong>Note:</strong>
+              <span class="text-muted">{{ job.note }}</span>
+            </li>
           </ul>
         </div>
         <!-- Right Column: Relevant User Details -->
